fix: add gap in block styles

--- a/src/scss/components/_block.scss
+++ b/src/scss/components/_block.scss
@@ -49,6 +49,7 @@
   padding: 1rem;
   background-color: rgba(0, 0, 0, 0.05);
 
+  gap: 1rem;
 @include tablets {
     padding: 1rem 1.5rem;
   }
